# data-analysis

./: 404.html  Dockerfile.mkdocs  Dockerfile.vizro  dashboard.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/hafen-hamburg-de/: breakbulk_0.csv  breakbulk_1.csv  bulk_0.csv  bulk_1.csv  containerhandling_0.csv  containerhandling_1.csv  containerhandling_2.csv  db.duckdb  seabornecargohandling_0.csv  seabornecargohandling_1.csv  seabornecargohandling_2.csv
notebooks/: extract.ipynb  transform-load.ipynb
search/: search_index.json
